--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"svelte-dnd-action": "0.9.52",
+		"sveltekit-search-params": "3.0.0",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0",
 		"vite": "^5.0.3"
