--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
 		"lint": "prettier --check . && eslint ."
 	},
 	"devDependencies": {
+		"@date-fns/utc": "2.1.0",
 		"@svelte-put/qr": "2.0.0",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"@types/eslint": "^9.6.0",
+		"date-fns": "4.1.0",
 		"eslint": "^9.7.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
